--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add a short description here"
 authors = [
     { name = "YadaYuki", email = "yada.yuki@fuji.waseda.jp" }
 ]
-dependencies = ["polars~=0.18.2", "pandas~=2.0.2", "pyarrow~=12.0.0", "requests~=2.31.0", "tqdm~=4.65.0", "pydantic~=1.10.9", "notebook~=6.5.4", "matplotlib~=3.7.1", "scikit-learn~=1.2.2", "implicit~=0.7.0", "h5py~=3.9.0", "torch~=2.0.1", "transformers~=4.30.2"]
+dependencies = ["polars~=0.18.2", "pandas~=2.0.2", "pyarrow~=12.0.0", "requests~=2.31.0", "tqdm~=4.65.0", "pydantic~=1.10.9", "notebook~=6.5.4", "matplotlib~=3.7.1", "scikit-learn~=1.2.2", "implicit~=0.7.0", "h5py~=3.9.0", "torch~=2.0.1", "transformers~=4.30.2", "accelerate~=0.21.0"]
 readme = "README.md"
 requires-python = ">= 3.11"
 
